# teacher-summoner

./: Cargo.toml  README.md  shell.nix
backend/: Cargo.toml
backend/src/: teacher.rs  ui.rs
doc/: todo.md
src/: class.rs  form.rs  main.rs  state.rs  student.rs  style.css  teacher.rs  template.rs  ticket.rs  ui.rs
static/: main.js  service-worker.js  style.css  teacher-view.js
