[package]
name = "tickets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-livereload = "0.8.2"
rand = "0.8.5"
log = "0.4.20"
